fix: gap

--- a/src/components/auth/forgotPassword/forgotPassword.module.scss
+++ b/src/components/auth/forgotPassword/forgotPassword.module.scss
@@ -16,6 +16,10 @@
   border: 1px solid var(--color-dark-300);
 }
 
+.title {
+  margin-bottom: 37px;
+}
+
 .hint {
   margin-bottom: 13px;
   color: var(--color-light-900);
